[package]

name = "yaxpeax-core"
version = "0.0.1"
authors = [ "iximeow <me@iximeow.net>" ]
license = "0BSD"
repository = ""
description = "program analysis for machine code"

[dependencies]
yaxpeax-arch = { path = "../yaxpeax-arch", features = ["use-serde"] }
yaxpeax-arm = { path = "../arch/arm", features = ["use-serde"] }
yaxpeax-x86 = { path = "../arch/x86", features = ["use-serde"] }
yaxpeax-msp430-mc = { path = "../arch/msp430", features = ["use-serde"] }
yaxpeax-pic17 = { path = "../arch/pic17", features = ["use-serde"] }
yaxpeax-pic18 = { path = "../arch/pic18", features = ["use-serde"] }
yaxpeax-pic24 = { path = "../arch/pic24", features = ["use-serde"] }
# "goblin" = "0.0.20"
goblin = { path = "/toy/rust/goblin" }
"num-traits" = "0.2"
"termios" = "0.2.2"
"termion" = "1.4.0"
"serde" = { version = "*", features = ["rc"] }
"serde_json" = "*"
"serde_derive" = "*"
"petgraph" = "*"
"nix" = "*"
"proc-maps" = "*"
"siphasher" = "0.3.0"

# [[bin]]
# name = "picanalyzer"
# test = false
# bench = false
# source = "src/picanalyzer.rs"

[profile.release]
lto = true
